--- a/.gitignore
+++ b/.gitignore
@@ -87,7 +87,7 @@ ipython_config.py
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
 #   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+.python-version
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
@@ -131,6 +131,7 @@ celerybeat.pid
 
 # Environments
 .env
+.env.*
 .venv
 env/
 venv/
@@ -171,3 +172,5 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+.env
