--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-# OpenAI API Key
+# OpenAI Settings
 OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_MODEL=gpt-4o-mini
 
-# Optional: Model configuration
-OPENAI_MODEL=gpt-4-turbo  # or gpt-3.5-turbo for faster, less expensive responses 
+# Google Gemini Settings
+GEMINI_API_KEY=your_gemini_api_key_here
+GEMINI_MODEL=gemini-2.0-flash-lite
