--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ docx2txt = "^0.8"
 faiss-cpu = "^1.10.0"
 tiktoken = "^0.9.0"
 python-dotenv = "^1.0.1"
-google-generativeai = "^0.8.4"
+langchain-google-genai = "^2.0.11"
 
 
 [build-system]
